--- a/deploy/crds/gcp.compute.hub.appvia.io_v1alpha1_gcpcredentials_cr.yaml
+++ b/deploy/crds/gcp.compute.hub.appvia.io_v1alpha1_gcpcredentials_cr.yaml
@@ -1,4 +1,4 @@
-apiVersion: gcp.project.hub.appvia.io/v1alpha1
+apiVersion: gcp.compute.hub.appvia.io/v1alpha1
 kind: GCPCredentials
 metadata:
   name: example-gcpcredentials
