--- a/deploy/crds/gcp.project.hub.appvia.io_v1alpha1_gcpadminproject_cr.yaml
+++ b/deploy/crds/gcp.project.hub.appvia.io_v1alpha1_gcpadminproject_cr.yaml
@@ -3,5 +3,8 @@ kind: GCPAdminProject
 metadata:
   name: example-gcpadminproject
 spec:
-  # Add fields here
-  size: 3
+  projectId:
+  projectName:
+  parentType:
+  parentId:
+  billingAccountName:
