--- a/deploy/crds/gcp.project.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
+++ b/deploy/crds/gcp.project.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
@@ -3,5 +3,6 @@ kind: GCPAdminToken
 metadata:
   name: example-gcpadmintoken
 spec:
-  # Add fields here
-  size: 3
+  token:
+  projectId:
+  organizationId:
