--- a/deploy/crds/.gitignore
+++ b/deploy/crds/.gitignore
@@ -1,3 +1,3 @@
 gcp.compute.hub.appvia.io_v1alpha1_gcpcredentials_cr.yaml
-gcp.project.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
+gcp.compute.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
 
