removing use where its not required, updating admin project crd

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ tags
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 *gcp.compute.hub.appvia.io_v1alpha1_gcpcredentials_cr.yaml
 *gcp.compute.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
+# Ignore all custom resource files, may contain secrets..
+.*_cr.yaml
