--- a/deploy/crds/gcp.compute.hub.appvia.io_gcpadminprojects_crd.yaml
+++ b/deploy/crds/gcp.compute.hub.appvia.io_gcpadminprojects_crd.yaml
@@ -8,7 +8,7 @@ spec:
     kind: GCPAdminProject
     listKind: GCPAdminProjectList
     plural: gcpadminprojects
-    singular: gcpproject
+    singular: gcpadminproject
   scope: Namespaced
   subresources:
     status: {}
