--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ tags
 .vscode/*
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
+*gcp.compute.hub.appvia.io_v1alpha1_gcpcredentials_cr.yaml
+*gcp.compute.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
