More crd bits (#6)
* generating openapi validations using operator-sdk cli

* trailing blank line

* adding gcp crds for token, admin project and credentials with specs

* removing use where its not required, updating admin project crd

* missing the retrieval of admin project object

* missing the retrieval of project object

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ tags
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 *gcp.compute.hub.appvia.io_v1alpha1_gcpcredentials_cr.yaml
 *gcp.compute.hub.appvia.io_v1alpha1_gcpadmintoken_cr.yaml
+# Ignore all custom resource files, may contain secrets..
+.*_cr.yaml
+deploy/crds/gcp.compute.hub.appvia.io_v1alpha1_gcpproject_cr.yaml
+deploy/crds/gcp.compute.hub.appvia.io_v1alpha1_gcpadminproject_cr.yaml
