--- a/deploy/crds/gcp.compute.hub.appvia.io_gcpcredentials_crd.yaml
+++ b/deploy/crds/gcp.compute.hub.appvia.io_gcpcredentials_crd.yaml
@@ -8,7 +8,7 @@ spec:
     kind: GCPCredentials
     listKind: GCPCredentialsList
     plural: gcpcredentials
-    singular: gcpcredential
+    singular: gcpcredentials
   scope: Namespaced
   subresources:
     status: {}
@@ -32,19 +32,22 @@ spec:
           description: GCPCredentialsSpec defines the desired state of GCPCredentials
           properties:
             key:
-              description: Key is the credential used to create GCP projects
-              type: string
-            projectId:
-              description: ProjectId is the GCP project ID these credentials belong to
-                has
+              description: Key is the credential used to create GCP projects You must
+                create a service account with resourcemanager.projectCreator and billing.user
+                roles at the organization level and use the JSON payload here
               type: string
             organizationId:
-              description: OrganizationId is the GCP organization these credentials belong to
+              description: Organization is the GCP org you wish the projects to reside
+                within
+              type: string
+            projectId:
+              description: ProjectId is the GCP project ID these credentials belong
+                to
               type: string
           required:
           - key
-          - projectId
           - organizationId
+          - projectId
           type: object
         status:
           description: GCPCredentialsStatus defines the observed state of GCPCredentials
@@ -52,6 +55,9 @@ spec:
             status:
               description: Status provides a overall status
               type: string
+            verified:
+              description: Verified checks that the credentials are ok and valid
+              type: boolean
           required:
           - status
           type: object
